--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -195,13 +195,33 @@
             background: var(--primary-blue);
             border: none;
             padding: 0.8rem 2rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            color: white;
+        }
+
+        .btn-primary::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transform: translateX(-100%);
+            transition: transform 0.2s ease;
         }
 
         .btn-primary:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(33, 150, 243, 0.3);
-            background: var(--primary-blue);
+            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.4);
+            background: #0ae4ce;
+            color: #025c4e;
+            transition: color 0.3s ease;
+        }
+
+        .btn-primary:hover::before {
+            transform: translateX(0);
         }
 
         .card {
@@ -384,6 +404,21 @@
             border-right: 5px solid transparent;
             border-top: 5px solid currentColor;
             pointer-events: none;
+        }
+
+        .btn-outline-light {
+            background: rgba(0, 0, 0, 0.675);
+            border: 1px solid rgba(255, 255, 255, 0);
+            color: white;
+            transition: all 0.3s ease;
+        }
+
+        .btn-outline-light:hover {
+            background: rgba(0, 0, 0, 0.7);
+            border-color: rgba(255, 255, 255, 0);
+            color: #2196f3;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(33, 150, 243, 0.3);
         }
     </style>
 
