--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -140,6 +140,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.21);
             backdrop-filter: blur(10px);
             height: 150px;
+            padding-bottom: 0rem !important;
             -webkit-backdrop-filter: blur(10px);
         }
 
