--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     
     <!-- SEO Meta Tags -->
     <title>NymShare - Secure & Ephemeral File Sharing Platform</title>
@@ -563,18 +563,6 @@
             font-size: 0.875rem;
         }
         
-        /* Mobile-specific zoom styling */
-        @media screen and (max-width: 768px) {
-            body {
-                zoom: 0.8;
-                -moz-transform: scale(0.8);
-                -moz-transform-origin: top left;
-                -webkit-transform: scale(0.8);
-                -webkit-transform-origin: top left;
-                transform: scale(0.8);
-                transform-origin: top left;
-            }
-        }
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
