--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -270,6 +270,7 @@
                 radial-gradient(100% 100% at calc(100% + var(--x)) calc(30% + var(--y)), rgb(100, 181, 246), rgb(13, 71, 161)), 
                 linear-gradient(60deg, rgb(33, 150, 243), rgb(25, 25, 25));
             background-blend-mode: overlay, overlay, difference, difference, difference, normal;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.9);
         }
 
         @media (max-width: 768px) {
