--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -55,6 +55,8 @@
         ]
     }
     </script>
+    <script src="https://unpkg.com/htmx.org@2.0.4/dist/htmx.js" integrity="sha384-oeUn82QNXPuVkGCkcrInrS1twIxKhkZiFfr2TdiuObZ3n3yIeMiqcRzkIcguaof1" crossorigin="anonymous"></script>
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -592,7 +594,7 @@
         </nav>
     </header>
 
-    <div class="content">
+    <div class="content" id="content">
     
         <!-- Hero Section -->
         <section class="hero" id="home" aria-label="Introduction">
@@ -600,11 +602,15 @@
                 <h1 class="display-4 mb-4" id="hero-title" data-i18n="hero.title">Secure & Ephemeral File Sharing</h1>
                 <p class="lead mb-5" data-i18n="hero.subtitle">End-to-end encrypted platform for secure document sharing. Perfect for legal professionals, NGOs, activists, and media organizations. Ideal for sensitive communications and confidential disclosures.</p>
                 <div class="d-flex justify-content-center gap-3">
-                    <button class="btn btn-primary btn-lg btn-with-icon">
+                    <button class="btn btn-primary btn-lg btn-with-icon"
+                        hx-get="/channel"
+                        hx-target="#content">
                         <span data-i18n="hero.create_channel">Create Secure Channel</span>
                         <img src="/static/assets/button.svg" alt="Arrow">
                     </button>
-                    <button class="btn btn-outline-light btn-lg btn-with-icon">
+                    <button class="btn btn-outline-light btn-lg btn-with-icon"
+                        hx-get="/share"
+                        hx-target="#content">
                         <span data-i18n="hero.share_confidentially">Share Confidentially</span>
                         <img src="/static/assets/button.svg" alt="Arrow">
                     </button>
