--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -577,7 +577,7 @@
     <header>
         <nav class="navbar navbar-expand-lg" role="navigation">
             <div class="d-flex justify-content-between align-items-center w-100">
-                <a class="navbar-brand d-flex align-items-center" href="#">
+                <a class="navbar-brand d-flex align-items-center" href="/">
                     <img src="/static/assets/logo.svg" alt="NymShare Logo" height="90" class="me-2">
                     <span class="fw-bold">NymShare</span>
                 </a>
